# misjustice-alliance-firm

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmodules  DEVELOPMENT_PLAN.md  README.md  SPEC.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.agent-outputs/: ci-smoke-test-findings.md
.github/workflows/: ci.yml
agents/: README.md
agents/atlas/: config.yaml  kimi-agent.yaml
agents/avery/: EVALS.yaml  GUARDRAILS.yaml  MEMORY.md  METRICS.md  POLICY.md  README.md  RUNBOOK.md  SPEC.md  config.yaml  kimi-agent.yaml  models.yaml
agents/casey/: EVALS.yaml  GUARDRAILS.yaml  MEMORY.md  METRICS.md  POLICY.md  README.md  RUNBOOK.md  SPEC.md  config.yaml  kimi-agent.yaml  models.yaml  tools.yaml
agents/chronology/: EVALS.yaml  GUARDRAILS.yaml  MEMORY.md  METRICS.md  POLICY.md  README.md  RUNBOOK.md  SPEC.md  config.yaml  kimi-agent.yaml  models.yaml  tools.yaml
agents/citation_authority/: EVALS.yaml  GUARDRAILS.yaml  MEMORY.md  METRICS.md  POLICY.md  README.md  RUNBOOK.md  SPEC.md  config.yaml  kimi-agent.yaml  models.yaml  tools.yaml
agents/dream-eval-writer/: GUARDRAILS.yaml  POLICY.md
agents/dream-pattern-miner/: GUARDRAILS.yaml  POLICY.md
agents/dream-reflector/: GUARDRAILS.yaml  POLICY.md
agents/dream-review-gate/: GUARDRAILS.yaml  POLICY.md
agents/dream-risk-auditor/: GUARDRAILS.yaml  POLICY.md
agents/dream-supervisor/: GUARDRAILS.yaml  POLICY.md
agents/hermes/: EVALS.yaml  GUARDRAILS.yaml  MEMORY.md  README.md  RUNBOOK.md  SOUL.md  SPEC.md  agent.yaml  config.yaml  kimi-agent.yaml  tools.yaml
agents/iris/: EVALS.yaml  GUARDRAILS.yaml  MEMORY.md  METRICS.md  POLICY.md  README.md  RUNBOOK.md  SPEC.md  config.yaml  kimi-agent.yaml  models.yaml  tools.yaml
agents/it_ops_dev/: README.md  department.yaml
agents/lex/: EVALS.yaml  GUARDRAILS.yaml  MEMORY.md  METRICS.md  POLICY.md  README.md  RUNBOOK.md  SPEC.md  config.yaml  kimi-agent.yaml  models.yaml  tools.yaml
agents/mira/: EVALS.yaml  GUARDRAILS.yaml  MEMORY.md  METRICS.md  POLICY.md  README.md  RUNBOOK.md  SPEC.md  config.yaml  kimi-agent.yaml  models.yaml  tools.yaml
agents/ollie/: EVALS.yaml  GUARDRAILS.yaml  MEMORY.md  METRICS.md  POLICY.md  README.md  RUNBOOK.md  SPEC.md  config.yaml  kimi-agent.yaml  models.yaml  tools.yaml
agents/quill/: EVALS.yaml  GUARDRAILS.yaml  MEMORY.md  METRICS.md  POLICY.md  README.md  RUNBOOK.md  SPEC.md  config.yaml  kimi-agent.yaml  models.yaml  tools.yaml
agents/rae/: EVALS.yaml  GUARDRAILS.yaml  MEMORY.md  METRICS.md  POLICY.md  README.md  RUNBOOK.md  SPEC.md  config.yaml  kimi-agent.yaml  models.yaml  tools.yaml
agents/social_media_manager/: EVALS.yaml  GUARDRAILS.yaml  MEMORY.md  METRICS.md  POLICY.md  README.md  RUNBOOK.md  SPEC.md  config.yaml  kimi-agent.yaml  models.yaml  tools.yaml
agents/sol/: EVALS.yaml  GUARDRAILS.yaml  MEMORY.md  METRICS.md  POLICY.md  README.md  RUNBOOK.md  SPEC.md  config.yaml  kimi-agent.yaml  models.yaml  tools.yaml
agents/veritas/: config.yaml  kimi-agent.yaml
agents/webmaster/: EVALS.yaml  GUARDRAILS.yaml  MEMORY.md  METRICS.md  POLICY.md  README.md  RUNBOOK.md  SPEC.md  config.yaml  kimi-agent.yaml  models.yaml  tools.yaml
analysis/reports/: architect-assessment.md  backend-assessment.md  research-assessment.md
apps/portal/: package.json
apps/website/: README.md  mission-statement.md
crewai-orchestrator/: Dockerfile  pyproject.toml
crewai-orchestrator/src/misjustice_crews/: main.py
crewai-orchestrator/src/misjustice_crews/agents/: __init__.py  factory.py
crewai-orchestrator/src/misjustice_crews/bridge/: __init__.py  dispatcher.py  models.py  paperclip_client.py  paperclip_stub.py  registry.py  server.py
crewai-orchestrator/src/misjustice_crews/config/: __init__.py  llm_config.py  memory_config.py  settings.py
crewai-orchestrator/src/misjustice_crews/crews/: __init__.py  advocacy_crew.py  drafting_crew.py  intake_crew.py  research_crew.py  support_crew.py
crewai-orchestrator/src/misjustice_crews/tasks/: __init__.py  advocacy_tasks.py  drafting_tasks.py  intake_tasks.py  research_tasks.py  support_tasks.py
crewai-orchestrator/src/misjustice_crews/tools/: __init__.py  custom_tools.py  document_tools.py  mcas_tools.py  mcp_tools.py  registry.py  web_search_tools.py
crewai-orchestrator/tests/unit/: test_crews.py  test_tasks.py  test_tools.py
crewai-orchestrator/tests/unit/bridge/: test_dispatcher.py  test_models.py  test_paperclip_client.py  test_registry.py  test_server.py
docs/: ARCHITECTURE_REVIEW.md  BOARD_PRESENTATION_Y1_STRUCTURE.md  HIRING_CTO.md  HIRING_ENGINEERS.md  HIRING_EXECUTIVE_DIRECTOR.md  HIRING_PLAN.md  MEMORY_SUBSTRATE.md  ORG_STRATEGY.md  crewai-mcp-integration.md  misjustice-dreaming-agent-policies.md  openapi.json
docs/infra/: deployment.md  (+1 more)
paperclip/: README.md  agent-registry.yaml  deploy.sh  federation-config.yaml
policies/: OSINT_USE_POLICY.md
scripts/: export_openapi.py
wiki/: SCHEMA.md  index.md  log.md
(+396 files in other folders)
